--- a/brush-shell/tests/cases/builtins/caller.yaml
+++ b/brush-shell/tests/cases/builtins/caller.yaml
@@ -1,7 +1,7 @@
 name: "caller builtin"
 cases:
   - name: "caller in function"
-    known_failure: true # TODO: implement caller builtin
+    known_failure: true # TODO(caller): implement caller builtin
     test_files:
       - path: script.sh
         contents: |
@@ -24,7 +24,7 @@ cases:
       outer
 
   - name: "caller no args"
-    known_failure: true # TODO: implement caller builtin
+    known_failure: true # TODO(caller): implement caller builtin
     test_files:
       - path: script.sh
         contents: |
@@ -37,18 +37,18 @@ cases:
       myfunc
 
   - name: "caller invalid expr"
-    known_failure: true # TODO: implement caller builtin
+    known_failure: true # TODO(caller): implement caller builtin
     ignore_stderr: true # Different error messages
     stdin: |
       f() { caller x; }
       f
 
   - name: "caller out of range"
-    known_failure: true # TODO: implement caller builtin
+    known_failure: true # TODO(caller): implement caller builtin
     stdin: |
       caller 100
 
   - name: "caller not in function"
-    known_failure: true # TODO: implement caller builtin
+    known_failure: true # TODO(caller): implement caller builtin
     stdin: |
       caller
