--- a/brush-shell/tests/cases/builtins/shopt.yaml
+++ b/brush-shell/tests/cases/builtins/shopt.yaml
@@ -2,13 +2,13 @@ name: "Builtins: shopt"
 cases:
   - name: "shopt defaults"
     min_oracle_version: 5.2
-    known_failure: true # TODO: new options from newer version of bash?
+    known_failure: true # TODO(shopt): new options from newer version of bash?
     stdin: |
       shopt | sort | grep -v extglob
 
   - name: "shopt interactive defaults"
     min_oracle_version: 5.2
-    known_failure: true # TODO: new options from newer version of bash?
+    known_failure: true # TODO(shopt): new options from newer version of bash?
     pty: true
     args: ["-i", "-c", "shopt | sort | grep -v extglob"]
 
@@ -23,7 +23,7 @@ cases:
     args: ["-i", "-c", "shopt -o | sort | grep -v monitor"]
 
   - name: "extglob defaults"
-    known_failure: true # TODO: we force this setting on in our shell
+    known_failure: true # TODO(patterns): we force this setting on in our shell
     stdin: |
       shopt extglob
 
