--- a/brush-shell/tests/cases/builtins/command.yaml
+++ b/brush-shell/tests/cases/builtins/command.yaml
@@ -55,7 +55,7 @@ cases:
       command -v -p cat
 
   - name: "command -v with full paths"
-    skip: true # TODO: investigate why this fails on arch linux
+    skip: true # TODO(command): investigate why this fails on arch linux
     stdin: |
       echo "[cat]"
       command -v cat
