--- a/brush-shell/tests/cases/redirection.yaml
+++ b/brush-shell/tests/cases/redirection.yaml
@@ -68,7 +68,7 @@ cases:
       cat < <(echo hi)
 
   - name: "Process substitution: output redirection"
-    skip: true # TODO: Test is flaky; needs work.
+    skip: true # TODO(redirection): Test is flaky; needs work.
     stdin: |
       shopt -u -o posix
       echo hi > >(wc -l)
