--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,6 +21,11 @@ on:
   push:
     branches: ["main"]
 
+# Only allow one run of the workflow per branch / PR at a time.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   CARGO_INCREMENTAL: 0
   CARGO_NET_GIT_FETCH_WITH_CLI: true
