--- a/.github/workflows/spelling.yaml
+++ b/.github/workflows/spelling.yaml
@@ -10,6 +10,11 @@ env:
 permissions:
   contents: read
 
+# Only allow one run of the workflow per branch / PR at a time.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   spelling:
     name: spell-check
