--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -570,7 +570,7 @@ jobs:
 
           - container: "nixos/nix:latest"
             description: "NixOS/latest"
-            prereqs_command: "nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs#sed nixpkgs#hexdump nixpkgs#bash-completion"
+            prereqs_command: "nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs#gnused nixpkgs#hexdump nixpkgs#bash-completion"
 
           # NOTE: We use Tumbleweed to make sure we get a recent enough version of bash.
           - container: "opensuse/tumbleweed:latest"
