fix: extended test redirection

--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -1,5 +1,10 @@
 name: "Extended tests"
 cases:
+  - name: "Extended test with redirect"
+    stdin: |
+      [[ $(echo hello >&2) ]] 2>/dev/null
+      echo "Result: $?"
+
   - name: "File extended tests"
     stdin: |
       [[ -a /tmp ]] && echo "-a correctly checked /tmp"
