--- a/brush-shell/tests/cases/callstack.yaml
+++ b/brush-shell/tests/cases/callstack.yaml
@@ -7,7 +7,9 @@ common_test_files:
       dump_source_info() {
           local prefix="${1:-}"
 
-          echo "${prefix}  caller: $(caller 2>&1 || echo '<failed>')"
+          # Normalize shell name to make sure it matches.
+          # TODO: Once all tests are run on 5.3, this will need to be revisited.
+          echo "${prefix}  caller: $(caller 2>&1 || echo '<failed>')" | sed -e "s|$0|main|g" | sed -e "s/environment/main/g"
 
           echo "${prefix}  LINENO: ${LINENO}"
           echo "${prefix}  FUNCNAME[@]: ${FUNCNAME[*]}"
@@ -26,7 +28,10 @@ common_test_files:
           local frame="${2:-0}"
           
           echo "${prefix}[Frame $frame]"
-          echo "${prefix}  caller N: $(caller $frame 2>&1 || echo '<failed>')"
+
+          # Normalize shell name to make sure it matches.
+          # TODO: Once all tests are run on 5.3, this will need to be revisited.
+          echo "${prefix}  caller N: $(caller $frame 2>&1 || echo '<failed>')" | sed -e "s|$0|main|g" | sed -e "s/environment/main/g"
       }
 
       # Helper to dump all stack info
