feat(builtins): implement caller builtin (#812)

--- a/brush-builtins/Cargo.toml
+++ b/brush-builtins/Cargo.toml
@@ -20,6 +20,7 @@ default = [
     'builtin.bind',
     'builtin.break',
     'builtin.builtin',
+    'builtin.caller',
     'builtin.cd',
     'builtin.colon',
     'builtin.command',
@@ -74,6 +75,7 @@ default = [
 'builtin.bind' = []
 'builtin.break' = []
 'builtin.builtin' = []
+'builtin.caller' = []
 'builtin.cd' = []
 'builtin.colon' = []
 'builtin.command' = []
