fix: omit unset vars from `set` builtin output

--- a/brush-shell/tests/cases/builtins/declare.yaml
+++ b/brush-shell/tests/cases/builtins/declare.yaml
@@ -132,6 +132,7 @@ cases:
     stdin: |
       declare -x myunsetexportedvar
       env | grep myunsetexportedvar
+      set | grep myunsetexportedvar=
 
   - name: "Re-declaring variable"
     stdin: |
