--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -16,6 +16,10 @@ bench = false
 [lints]
 workspace = true
 
+[features]
+default = []
+serde = ["dep:serde", "brush-parser/serde", "rpds/serde", "chrono/serde"]
+
 [dependencies]
 async-recursion = "1.1.1"
 async-trait = "0.1.89"
@@ -33,6 +37,7 @@ itertools = "0.14.0"
 normalize-path = "0.2.1"
 rand = "0.9.2"
 rpds = "1.2.0"
+serde = { version = "1.0.228", optional = true, features = ["derive"] }
 strum = "0.27.2"
 strum_macros = "0.27.2"
 thiserror = "2.0.17"
