feat: add experimental `save` builtin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "brush-parser",
     "brush-core",
     "brush-builtins",
+    "brush-experimental-builtins",
     "brush-interactive",
     "fuzz",
     "xtask",
