--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -25,6 +25,7 @@ reedline = ["dep:reedline", "dep:nu-ansi-term", "completion"]
 workspace = true
 
 [dependencies]
+bon = "3.8.1"
 brush-parser = { version = "^0.3.0", path = "../brush-parser" }
 brush-core = { version = "^0.4.0", path = "../brush-core" }
 crossterm = { version = "0.29.0", features = ["serde"], optional = true }
@@ -32,13 +33,5 @@ indexmap = "2.12.1"
 nu-ansi-term = { version = "0.50.3", optional = true }
 reedline = { version = "0.44.0", optional = true }
 thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = ["rt", "sync"] }
 tracing = "0.1.41"
-
-[target.'cfg(unix)'.dependencies]
-nix = { version = "0.30.1", features = ["term"] }
-
-[target.'cfg(any(unix, windows))'.dependencies]
-tokio = { version = "1.48.0", features = ["macros", "signal"] }
-
-[target.wasm32-unknown-unknown.dependencies]
-getrandom = { version = "0.3.4", features = ["wasm_js"] }
