feat: init commit of tuish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "brush-builtins",
     "brush-experimental-builtins",
     "brush-interactive",
+    "tuish",
     "fuzz",
     "xtask",
 ]
