feat: vim working

--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -63,6 +63,7 @@ whoami = "1.6.1"
 
 [target.'cfg(unix)'.dependencies]
 command-fds = "0.3.2"
+libc = "0.2.178"
 nix = { version = "0.30.1", features = [
     "fs",
     "process",
