--- a/tuish/Cargo.toml
+++ b/tuish/Cargo.toml
@@ -34,6 +34,7 @@ tokio = { version = "1.48.0", features = [
     "rt-multi-thread",
     "sync",
     "io-util",
+    "time",
 ] }
 thiserror = "2.0.17"
 tracing = "0.1.43"
