fix: targeted fixes

--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -82,3 +82,7 @@ uuid = { version = "1.19.0", features = ["js"] }
 [dev-dependencies]
 anyhow = "1.0.100"
 pretty_assertions = { version = "1.4.1", features = ["unstable"] }
+
+[[example]]
+name = "custom-extensions"
+required-features = ["experimental-filters"]
